# Artie

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: artie.h
src/: artie.cpp  main.cpp
